# mousetune

./: .clang-format  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  cspell.json  launch-agent.plist  main.c  mousetune.c  mousetune.plist  mset.c  mset.h  mset.plist
.cspell/: custom-words.txt
.github/workflows/: ci.yml
c/: mousetune.c
examples/: cli.rs
src/: lib.rs
tests/: basic.rs
